add fake bands endpoint
