# rest-app-openapi/src/main/java/com/epam/brest/openapi/delegateimpl/BandsDelegateImpl.java
@@ -2,6 +2,7 @@ package com.epam.brest.openapi.delegateimpl;
 
 import com.epam.brest.model.Band;
 import com.epam.brest.openapi.api.BandsApiDelegate;
+import com.epam.brest.service.BandFakerService;
 import com.epam.brest.service.BandService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -18,8 +19,18 @@ public class BandsDelegateImpl implements BandsApiDelegate {
 
     private final BandService bandService;
 
-    public BandsDelegateImpl(BandService bandService) {
+    private final BandFakerService bandFakerService;
+
+    public BandsDelegateImpl(BandService bandService, BandFakerService bandFakerService) {
         this.bandService = bandService;
+        this.bandFakerService = bandFakerService;
+    }
+
+    @Override
+    public ResponseEntity<List<Band>> bandsFake(Integer size, String language) {
+        LOGGER.debug("bandsFake()");
+        List<Band> resultList = bandFakerService.fillFakeBands(size, language);
+        return new ResponseEntity<>(resultList, HttpStatus.OK);
     }
 
     @Override
